# evaleds

./: .gitignore  ALIGNMENT_SUMMARY.md  Cargo.toml  Makefile  README.md  analysis_engine.rs  config.rs  install.sh  lib.rs  main.rs  prompteds_client.rs  provider_manager.rs  run_command.rs  setup_complete.rs  storage.rs  uninstall.sh  web_server.rs
scripts/: install.ps1  uninstall.ps1
src/: lib.rs
src/cli/: args.rs
src/cli/commands/: mod.rs
src/core/: evaluation_ext.rs  mod.rs
src/utils/: error.rs  interactive.rs  mod.rs  output.rs
